# TODO_App

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/task_manager/: __init__.py  __main__.py
src/task_manager/api/: __init__.py  gui.py
src/task_manager/core/: __init__.py  repository_interface.py  task_service.py
src/task_manager/infra/: __init__.py  repository.py
src/task_manager/models/: __init__.py  task.py
tests/: __init__.py  test_core.py  test_factory.py  test_infra.py  test_models.py
