[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task_manager"
version = "0.1.0"
description = "A modern and professional daily task manager."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Jules", email = "jules@example.com" }
]
dependencies = [
    "customtkinter>=5.2.1",  # Modern UI library for the Task Manager GUI
]

[project.scripts]
task-manager = "task_manager.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/task_manager"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "ANN"]
ignore = [
    "S101",    # Use of assert is okay in tests
    "PLR0913", # Many arguments is fine for GUI constructors
    "ANN101",  # Deprecated: Missing type annotation for self
    "ANN102",  # Deprecated: Missing type annotation for cls
    "ANN204",  # Missing return type for __init__
    "ANN401",  # Allow Any for GUI events/masters
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
