[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task_manager"
version = "0.1.1"
description = "A modern and professional daily task manager."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Jules", email = "jules@example.com" }
]
dependencies = [
    "customtkinter>=5.2.1", # Modern GUI framework
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.7.0",
]

[project.scripts]
task-manager = "task_manager.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/task_manager"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "ANN"]
ignore = ["S101", "PLR0913", "ANN401"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
