[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task_manager"
version = "0.1.0"
description = "A modern and professional daily task manager."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Jules", email = "jules@example.com" }
]
dependencies = [
    "customtkinter>=5.2.1",  # Modern GUI framework with dark mode support
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "mypy>=1.5.0",
    "ruff>=0.0.285",
    "black>=23.7.0",
]

[project.scripts]
task-manager = "task_manager.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/task_manager"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "ANN"]
ignore = [
    "S101",    # Use of assert is fine in tests
    "PLR0913", # Allow more than 5 arguments in GUI callbacks
    "ANN401",  # Allow Any for GUI-specific parameters
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
